--- a/index.html
+++ b/index.html
@@ -117,31 +117,41 @@
           <h2 class="what-we-do-tittle">Чим ми займаємося</h2>
           <ul class="what-we-do-list list">
             <li class="what-we-do-item">
-              <img
+              <div class="wwd-image">
+                <img
                 class="what-we-do-image"
                 src="./image/imgDZ1.jpg"
                 alt="Людина на клавіатурі набирає код за допомоною планшету"
                 width="370"
                 height="294"
               />
+              <p class="wwd-image-text">Десктопні додатки</p>
+              </div>
+             
             </li>
             <li class="what-we-do-item">
-              <img
+              <div class="wwd-image">
+                <img
                 class="what-we-do-image"
                 src="./image/imgDZ2.jpg"
-                alt="Людина тримає телефон у лівій руці та працює за ноутбуком"
+                alt="Людина на клавіатурі набирає код за допомоною планшету"
                 width="370"
                 height="294"
               />
+              <p class="wwd-image-text">Мобільні додатки</p>
+              </div>
             </li>
             <li class="what-we-do-item">
-              <img
+              <div class="wwd-image">
+                <img
                 class="what-we-do-image"
                 src="./image/imgDZ3.jpg"
-                alt="Людина на планшенті обирає відтінок фарби"
+                alt="Людина на клавіатурі набирає код за допомоною планшету"
                 width="370"
                 height="294"
               />
+              <p class="wwd-image-text">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
