--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
           <h2 class="what-we-do-tittle">Чим ми займаємося</h2>
           <ul class="what-we-do-list list">
             <li class="what-we-do-item">
-              <div class="wwd-image">
                 <img
                 class="what-we-do-image"
                 src="./image/imgDZ1.jpg"
@@ -126,11 +125,9 @@
                 height="294"
               />
               <p class="wwd-image-text">Десктопні додатки</p>
-              </div>
              
             </li>
             <li class="what-we-do-item">
-              <div class="wwd-image">
                 <img
                 class="what-we-do-image"
                 src="./image/imgDZ2.jpg"
@@ -139,10 +136,8 @@
                 height="294"
               />
               <p class="wwd-image-text">Мобільні додатки</p>
-              </div>
             </li>
             <li class="what-we-do-item">
-              <div class="wwd-image">
                 <img
                 class="what-we-do-image"
                 src="./image/imgDZ3.jpg"
@@ -151,7 +146,6 @@
                 height="294"
               />
               <p class="wwd-image-text">Дизайнерські рішення</p>
-              </div>
             </li>
           </ul>
         </div>
@@ -447,7 +441,7 @@
           </div>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18" >
